Fix text-align when wrap with Spectacle Compoent
Because Spectacle declare text-align: center

--- a/src/components/EditorApp/style.scss
+++ b/src/components/EditorApp/style.scss
@@ -3,4 +3,5 @@
   height: 100%;
   background: #4bf;
   white-space: nowrap;
+  text-align: left;
 }
